--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= render 'layouts/nav'%>
+  <%= bootstrap_flash %>
+  <div class='container'>
+    <%= yield %>
+  </div>
+  
+  <%= render 'layouts/foot'%>
+  
 </body>
 </html>
