--- a/app/views/layouts/_foot.html.erb
+++ b/app/views/layouts/_foot.html.erb
@@ -1,41 +1,25 @@
 <% if current_user %>
-
-<footer>
-     <div class="footer-left">
-<h3>Company<span>logo</span></h3>
-<p class="footer-links">
-<a href="#">Home</a>
-·
-<a href="#">Blog</a>
-·
-<a href="#">Pricing</a>
-·
-<a href="#">About</a>
-·
-<a href="#">Faq</a>
-·
-<a href="#">Contact</a>
-</p>
-<p class="footer-company-name">Company Name &copy; 2015</p>
-<div class="footer-icons">
-<a href="#"><i class="fa fa-facebook"></i></a>
-<a href="#"><i class="fa fa-twitter"></i></a>
-<a href="#"><i class="fa fa-linkedin"></i></a>
-<a href="#"><i class="fa fa-github"></i></a>
-
-2 
-</div>
-</div>
-    <div class="footer-right">
-    <p>Contact Us</p>
-    <form action="#" method="post">
-    <input type="text" name="email" placeholder="Email" />
-    <textarea name="message" placeholder="Message"></textarea>
-    <button>Send</button>
-    </form>
-    </div>
     
-</footer>
+    <footer class="footer-distributed">
+        <div class="footer-right">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-github"></i></a>
+                
+        </div>
+        <div class="footer-left">
+        <p>Contact Us</p>
+            <p class="footer-links">
+                .
+                <a class="page-scroll" href="#portfolio">Contact Us</a>
+                .
+                <a class="page-scroll" href="#services">About Us</a>
+            </p>
+            <p></p>
+        </div>
+        
+    </footer>
 
 
 <% else %>
@@ -43,38 +27,37 @@
 
 <footer class="footer-distributed">
     <div class="footer-left">
-<h3>Company<span>logo</span></h3>
-<p class="footer-links">
-<a href="#">Home</a>
-·
-<a href="#">Blog</a>
-·
-<a href="#">Pricing</a>
-·
-<a href="#">About</a>
-·
-<a href="#">Faq</a>
-·
-<a href="#">Contact</a>
-</p>
-<p class="footer-company-name">Company Name &copy; 2015</p>
-<div class="footer-icons">
-<a href="#"><i class="fa fa-facebook"></i></a>
-<a href="#"><i class="fa fa-twitter"></i></a>
-<a href="#"><i class="fa fa-linkedin"></i></a>
-<a href="#"><i class="fa fa-github"></i></a>
+        <h3>Company<span>logo</span></h3>
+        
+        <p class="footer-links">
+            <a href="#">Home</a>
+            ·
+            <a href="#">Blog</a>
+            ·
+            <a href="#">Pricing</a>
+            ·
+            <a href="#">About</a>
+            ·
+            <a href="#">Faq</a>
+            ·
+            <a href="#">Contact</a>
+        </p>
+        <p class="footer-company-name">Company Name &copy; 2015</p>
+        <div class="footer-icons">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-github"></i></a>
+        </div>
+    </div>
 
-2 
-</div>
-</div>
     <div class="footer-right">
-    <p>Contact Us</p>
-    <form action="#" method="post">
-    <input type="text" name="email" placeholder="Email" />
-    <textarea name="message" placeholder="Message"></textarea>
-    <button>Send</button>
-    </form>
+        <p>Contact Us</p>
+        <form action="#" method="post">
+            <input type="text" name="email" placeholder="Email" />
+            <textarea name="message" placeholder="Message"></textarea>
+            <button>Send</button>
+        </form>
     </div>
 </footer>
-
 <% end %>
