--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,6 +16,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Contact Us", pages_contact_path %></li>
         <li><%= link_to "About Us", pages_about_path %></li>
+        <li><%= link_to "Create Article", new_article_path %></li>
         <% if !current_user %>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
           <li><%= link_to "Sign In", new_user_session_path %></li>
