--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -137,9 +137,16 @@ ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
  </div>
  <!-- Side Widget Well -->
  <div class="well">
- <h4>Side Widget Well</h4>
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci
-accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
+  <h4>Recent Posted</h4>
+  <% @articles.each do |a| %>
+   <strong><%= link_to a.title, a %></strong>
+   <br>
+   <p>
+   <%= truncate(a.body) %></p>
+   <br>
+   
+  <% end %>
+  
  </div>
  </div>
 </div>
